k8s/base/onepassword/1password-connect/app/networkpolicies.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-eso
  namespace: onepassword
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: external-secrets
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
